--- a/pages/Home.css
+++ b/pages/Home.css
@@ -7,21 +7,23 @@
 
 #header {
     width: 100%;
-    height: 12%;
     display: flex;
     justify-content: center;
     align-items: center;
     justify-content: center;
     background-color: #90A955;
+    border-bottom: 2px solid #31572C;
 }
 #nav-box {
     width: 70%;
     height: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 #nav-box img {
     margin: 0.1rem;
+    width: 6rem;
 
 }
 #center-box {
@@ -30,21 +32,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    color: #31572C;
+    font-weight: bold;
 }
-#center-box{
-    color: #132A13;
-}
-#botonera-box{
-    width: 30%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    
-}
+
 #botonera {
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    width: 32%;
+    height: 100%;
+    align-items: center;
 }
 #botonera button {
     background-color: #132A13;
@@ -53,6 +50,7 @@
   }
   #botonera button:hover {
     background-color: #31572C;
+    border: 2px solid #ECF39E;
   }
 
 #caja-home{
@@ -109,16 +107,15 @@
     color: #31572C;
     font-size: 1rem;
 }
-#caja-abogados {
+#caja-clientes {
     height: auto;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #ECF39E;
 }
-#caja-center-abogados {
+#caja-center-clientes {
     width: 70%;
     height: 100%;
     display: flex;
@@ -128,6 +125,7 @@
     color: #31572C;
 }
 .contenido-card{
+    width: 70%;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -135,38 +133,35 @@
     background-color: rgb(49, 87, 44, 0.1);
     border-radius: 15px;
     padding-top: 1rem;
-    margin-bottom: 1rem;
     padding-left: 1rem;
     padding-right: 1rem;
+    margin-bottom: 1rem;
 }
-#img-abogada{
+.img-card{
     width: 15rem;
     border-radius: 15px; /* Ajusta este valor para más o menos redondez */
     border: 2px solid #31572C; /* Cambia el color y el grosor del borde */
     
 }
-#caja-center-abogados h2{
+#caja-center-clientes h2{
     font-family: 'Mac';
     font-size: 2rem;
     margin-top: 1rem;
     margin-bottom: 0.5rem;
 }
-#caja-center-abogados ul{
+#caja-center-clientes ul{
     margin-top: 0;
     margin-bottom: 1.8rem;
 }
+
 #text-empr{
-    width: 50%;
+    width: 100%;
     margin-top: 0;
 }
-
-
-
-
-
 #caja-footer {
     width: 100%;
     height: 10%;
+    border-top: 2px solid #31572C;;
     display: flex;
     justify-content: center;
     align-items: center;
