--- a/pages/Login.css
+++ b/pages/Login.css
@@ -5,6 +5,21 @@
 #90A955
 #ECF39E
 */
+#contenedor-todo {
+  width: 100%;
+  height: 100vh;
+}
+.hover-image {
+  transition: transform 0.3s ease; /* Transición suave */
+}
+
+.hover-image:hover {
+  transform: scale(1.1); /* Aumenta el tamaño de la imagen al hacer hover */
+}
+
+
+
+
 #caja-login {
     width: 100%;
     height: 90%;
@@ -12,7 +27,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #ECF39E;
+    
   }
   #caja-logo {
     width: 50%;
@@ -92,7 +107,8 @@
     margin-left: 0.5rem;
     margin-right: 0.5rem;
   }
-  
+
+
   @media (min-width: 768px) and (max-width: 992px) {
     #caja-form {
       width: 50%;
