--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -38,8 +38,8 @@
 
 #botonera {
     display: flex;
-    justify-content: space-between;
-    width: 32%;
+    justify-content: space-around;
+    width: 40%;
     height: 100%;
     align-items: center;
 }
@@ -52,3 +52,74 @@
     background-color: #31572C;
     border: 2px solid #ECF39E;
   }
+  @media (min-width: 993px) and (max-width: 1145px) {
+    #botonera button {
+      width: 5rem;
+      font-size: 0.8rem;
+      margin-bottom: 0;
+    }
+    #center-box {
+      text-align: center;
+    }
+}
+@media (min-width: 906px) and (max-width: 992px) {
+  #botonera button {
+    width: 5rem;
+    font-size: 0.8rem;
+    margin-bottom: 0;
+  }
+  #center-box {
+    text-align: center;
+    font-size: 0.8rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 905px) {
+
+  #botonera button {
+    width: 5rem;
+    font-size: 0.8rem;
+    margin-bottom: 0;
+  }
+  #center-box {
+    text-align: center;
+    font-size: 0.8rem;
+  }
+  #nav-box {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
+  }
+  #nav-box img {
+    margin: 0.1rem;
+    width: 5rem;
+  }
+}
+@media (max-width: 767px) {
+  #botonera {
+    width: 70%;
+  }
+  #botonera button {
+    width: 5rem;
+    font-size: 0.8rem;
+    margin-bottom: 0;
+  }
+  #center-box {
+    display: none;
+    text-align: center;
+    font-size: 0.8rem;
+  }
+  #nav-box {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
+  }
+  #nav-box img {
+    margin: 0.1rem;
+    width: 5rem;
+  }
+
+}
