--- a/pages/AbogadoScreen.css
+++ b/pages/AbogadoScreen.css
@@ -26,7 +26,7 @@
     display: flex;
     flex-direction: column;
     justify-content:first baseline;
-    color: #31572C;
+    color: #132A13;
     align-items: center;
 }
 .img-screen-abo{
@@ -34,10 +34,19 @@
     margin-top: 3rem;
     border: 2px solid #31572C; /* Cambia el color y el grosor del borde */
     border-radius: 15px; /* Ajusta este valor para más o menos redondez */
+    transition: transform 0.3s ease; /* Transición suave */
+}
+.img-screen-abo:hover {
+    transform: scale(1.1); /* Aumenta el tamaño de la imagen al hacer hover */
 }
 .text-screen-abo {
     margin-top: 0;
+    color: #31572C;
 }
+.text-screen-abo:hover {
+    color: #4F772D
+}
+
 #caja-cen {
     width: 30%;
     height: 100%;
@@ -50,4 +59,61 @@
 #caja-der {
     width: 40%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: start;
+}
+#caja-der h3{
+    color: #31572C;
+    margin-bottom: 0.4rem;
+}
+#caja-casos{
+    height: 20rem;
+    width: 19rem;
+    background-color: #F5F5F5;
+    border: 2px solid #31572C;
+}
+#buscador-casos {
+    height: 12%;
+}
+#buscador-casos input{
+    height: 80%;
+    width: 75%;
+    background-color: #F5F5F5;
+    margin-left: 0.1rem;
+    margin-top: 0.2rem;
+    border-top: none; /* Sin borde superior */
+    border-left: none; /* Sin borde izquierdo */
+    border-bottom: 1px solid #31572C; /* Agregar borde inferior */
+    border-right: none; /* Sin borde derecho */
+    color: #31572C;
+}
+#buscador-casos button{
+    height: 80%;
+    font-size: 0.6rem;
+    margin-top: 0;
+    margin-bottom: 0;
+    background-color: #31572C;
+    border: 1px solid #132A13;
+    border-radius: 14px; /* Cambia el color y el grosor del borde */
+    color: #F5F5F5;;
+}
+#buscador-casos button:hover {
+    background-color: #4F772D;
+    border-color: #F5F5F5;
+}
+#boton-agregar {
+    background-color: #31572C;
+    color: #F5F5F5;
+    margin-top: 0.5rem;
+}
+#boton-agregar:hover {
+    background-color: #4F772D;
+    border: 2px solid #ECF39E;
+}
+
+#lista-casos {
+    width: 100%;
+    height: 88%;
 }
