--- a/pages/AbogadoScreen.css
+++ b/pages/AbogadoScreen.css
@@ -15,64 +15,30 @@
   }
 #cuerpo-abo-screen{
     width: 80%;
-    height: 75%;
+    height: 78%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 #caja-izq {
-    width: 30%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content:first baseline;
-    color: #132A13;
-    align-items: center;
-}
-.img-screen-abo{
-    width: 7rem;
-    margin-top: 3rem;
-    border: 2px solid #31572C; /* Cambia el color y el grosor del borde */
-    border-radius: 15px; /* Ajusta este valor para más o menos redondez */
-    transition: transform 0.3s ease; /* Transición suave */
-}
-.img-screen-abo:hover {
-    transform: scale(1.1); /* Aumenta el tamaño de la imagen al hacer hover */
-}
-.text-screen-abo {
-    margin-top: 0;
-    color: #31572C;
-}
-.text-screen-abo:hover {
-    color: #4F772D
-}
-
-#caja-cen {
-    width: 30%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content:first baseline;
-    color: #31572C;
-    align-items: center;
-}
-#caja-der {
     width: 40%;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: start;
-}
-#caja-der h3{
-    color: #31572C;
-    margin-bottom: 0.4rem;
+    /*border: 2px solid #31572C;*/
 }
 #caja-casos{
     height: 20rem;
     width: 19rem;
     background-color: #F5F5F5;
     border: 2px solid #31572C;
+}
+#caja-izq h3{
+    color: #31572C;
+    margin-bottom: 0.4rem;
+    margin-top: 2rem;
 }
 #buscador-casos {
     height: 12%;
@@ -112,8 +78,61 @@
     background-color: #4F772D;
     border: 2px solid #ECF39E;
 }
-
 #lista-casos {
     width: 100%;
     height: 88%;
+}
+#caja-cen {
+    width: 20%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content:first baseline;
+    color: #31572C;
+    align-items: center;
+    /*border: 2px solid #31572C;*/
+}
+
+.img-screen-abo{
+    width: 7rem;
+    margin-top: 1rem;
+    border: 2px solid #31572C; /* Cambia el color y el grosor del borde */
+    border-radius: 15px; /* Ajusta este valor para más o menos redondez */
+    transition: transform 0.3s ease; /* Transición suave */
+}
+.img-screen-abo:hover {
+    transform: scale(1.1); /* Aumenta el tamaño de la imagen al hacer hover */
+}
+.text-screen-abo {
+    margin-top: 0;
+    color: #31572C;
+    font-size: 1.2rem;
+}
+.text-screen-abo:hover {
+    color: #4F772D
+}
+#caja-der {
+    width: 40%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #132A13;
+    align-items: center;
+    /*border: 2px solid #31572C;*/
+}
+#caja-der p {
+    color: #132A13;
+    width: 100%;
+    padding-left: 1rem;
+    margin-bottom: 0;
+}
+#boton-agregar-tarea {
+    background-color: #31572C;
+    color: #F5F5F5;
+    margin-top: 1rem;
+}
+#boton-agregar-tarea:hover {
+    background-color: #4F772D;
+    border: 2px solid #ECF39E;
 }
