--- a/pages/Login.css
+++ b/pages/Login.css
@@ -8,6 +8,8 @@
 #contenedor-todo {
   width: 100%;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 .hover-image {
   transition: transform 0.3s ease; /* Transición suave */
@@ -17,12 +19,9 @@
   transform: scale(1.1); /* Aumenta el tamaño de la imagen al hacer hover */
 }
 
-
-
-
 #caja-login {
     width: 100%;
-    height: 90%;
+    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -59,16 +58,6 @@
     background-color: #31572C;
     border: 2px solid #ECF39E;
   }
-  #caja-footer {
-    width: 100%;
-    height: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #90A955;
-    flex-direction: column;
-    
-  }
   .cajita-form { 
     margin-top: 2rem;
     margin-bottom: 2rem;
@@ -84,29 +73,6 @@
   }
   .cajita-form input::placeholder {
     color: #132A13; /* Puedes ajustar el color según tus preferencias */
-  }
-  #caja-redes {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    height: 50%;
-    padding: 0.2rem;
-  
-  }
-  #caja-texto-footer {
-    color: #132A13;
-    height: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    font-size: 15px;
-    padding: 0;
-  }
-  .social-icon {
-    font-size: 20px;  /* Adjust as needed */
-    color: #132A13; /* Optional color */
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
   }
 
 
