--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 #caja-footer {
     width: 100%;
-    height: 10%;
+    height: 5rem;
     border-top: 2px solid #31572C;;
     display: flex;
     justify-content: center;
